<LinearLayout android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/groups_new_group_information"
            android:layout_marginBottom="12dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <EditText
                android:id="@+id/groups_new_group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/groups_new_group_groupname" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <EditText
                android:id="@+id/groups_new_group_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/groups_new_group_description" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/groups_new_group_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/groups_new_group_password" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:layout_margin="20dp"
        android:background="@color/lmugreen"
        android:textColor="@color/white"
        android:id="@+id/groups_new_group_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/groups_new_group_create"/>


</LinearLayout>
