<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="lmu.de.unificiencyandroid.Register_Activity">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Unificiency"
        android:textSize="50px"
        android:layout_below="@+id/logo_image" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="30px"
        android:layout_marginTop="100px"
        android:layout_marginLeft="100px"
        android:layout_below="@+id/appname"  />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/username"
        android:layout_toRightOf="@+id/username"/>

    <TextView
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nickname"
        android:textSize="30px"
        android:layout_marginTop="30px"
        android:layout_marginLeft="100px"
        android:layout_below="@+id/username" />
    <EditText
        android:layout_below="@+id/nickname"
        android:layout_alignBaseline="@+id/nickname"
        android:layout_toRightOf="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/password_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="30px"
        android:layout_marginTop="30px"
        android:layout_marginLeft="100px"
        android:layout_below="@+id/nickname" />
    <EditText
        android:layout_below="@+id/password_register"
        android:layout_alignBaseline="@+id/password_register"
        android:layout_toRightOf="@+id/password_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/password_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_confirm"
        android:textSize="30px"
        android:layout_marginTop="30px"
        android:layout_marginLeft="100px"
        android:layout_below="@+id/password_register" />
    <EditText
        android:layout_below="@+id/password_confirm"
        android:layout_alignBaseline="@+id/password_confirm"
        android:layout_toRightOf="@+id/password_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/major"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/major"
        android:textSize="30px"
        android:layout_marginTop="30px"
        android:layout_marginLeft="100px"
        android:layout_below="@+id/password_confirm" />
    <EditText
        android:layout_below="@+id/major"
        android:layout_alignBaseline="@+id/major"
        android:layout_toRightOf="@+id/major"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/login"
        android:textAllCaps="false"
        android:text="@string/creat_account"
        android:layout_width="400px"
        android:layout_height="wrap_content"
        android:layout_marginTop="100px"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/major" />



</RelativeLayout>
