<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="4dp"
        android:background="@color/lmugreen"
        android:layout_marginBottom="12dp">

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/logo_image"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginBottom="16dp"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_margin="28dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_form_root"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/username"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="105dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/login"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:elevation="2dp"
            style="@style/Widget.AppCompat.Button.Colored" />
        <Button
            android:id="@+id/register"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:elevation="2dp"
            style="@style/Widget.AppCompat.Button.Colored" />

        <Button
            android:id="@+id/chat"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Chatten mit uns"
            android:elevation="2dp"
            style="@style/Widget.AppCompat.Button.Colored" />
    </LinearLayout>


</LinearLayout>